--- a/ADSAP/templates/registration/login.html
+++ b/ADSAP/templates/registration/login.html
@@ -114,7 +114,7 @@
     </svg>
 
 <main class="form-signin w-100 m-auto">
-  <form action="" method="post">
+  <form action="" method="post" class="form">
     {% csrf_token %}
     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-door-open-fill" viewBox="0 0 16 16">
       <path d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15zM11 2h.5a.5.5 0 0 1 .5.5V15h-1zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1"/>
@@ -129,14 +129,17 @@
       <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
     </div>
-
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Remember me
-      </label>
-    </div>
     <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <a href="{% url 'users:reset_password' %}">¿Olvidaste tu contraseña?</a>
+
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+
     <p class="mt-5 mb-3 text-body-secondary">&copy; ADSAP–2024</p>
   </form>
 </main>
