--- a/ADSAP/templates/faq.html
+++ b/ADSAP/templates/faq.html
@@ -1,9 +1,29 @@
 {% extends 'base/base.html'%}
 
-{% block title %}INDEX VIEW {% endblock title %}
+{% block title %}FAQ VIEW {% endblock title %}
 
 {% block content %}
 
-    <h1>FAQS</h1>
+{% for pregunta in preguntas %}
+<div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading{{ forloop.counter }}">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseThree">
+            {{ pregunta.pregunta }}
+        </button>
+      </h2>
+      <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            {{ pregunta.respuesta }}
+        </div>
+      </div>
+    </div>
+  </div>
+    
+    
+{% endfor %}
+
+
+
 
 {% endblock content %}
