--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -88,6 +88,17 @@
       .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
       }
+      .col-lg-2 {
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        overflow-y: auto;
+        padding-left: 0; /* elimina el margen izquierdo */
+      } 
+      .col-lg-9 {
+        margin-left: 300px; /* ajusta el margen izquierdo según el ancho del sidebar */
+      }     
     </style>
 
     <link href="{% static 'css/sidebars.css' %}" rel="stylesheet">
@@ -96,7 +107,7 @@
   <body>
     
       <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-2">
               <!-- Sidebar -->
               <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
                 <symbol id="question" viewBox="0 0 16 16">
@@ -121,19 +132,19 @@
                 </symbol>
               </svg>
               
-              <main class="d-flex flex-nowrap">
+              <main class="d-flex flex-nowrap ">
                 <div class="d-flex flex-column flex-shrink-0 p-3 bg-color" style="width: 300px;">
                   <a href="{% url 'home:home' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
                       <path d="M4 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"/>
                       <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3z"/>
                     </svg>
-                    <span class="fs-4"> ADSAP</span>
+                    <span class="fs-1"> ADSAP</span>
                   </a>
                   <hr>
-                <p class="text-white">Nombre de la empresa: </p>
+                <p class="text-white " style="font-size: large; margin-bottom: 0px;"> <b>Nombre de la empresa:</b> </p>
                 <p class="text-white"> Empresa </p>
-                <p class="text-white">Nombre del empleado: </p>
+                <p class="text-white" style="font-size: large; margin-bottom: 0px;"><b>Nombre del empleado:</b> </p>
                 <p class="text-white"> {{ user.username }} </p>
                 <hr>
                   <ul class="nav nav-pills flex-column mb-auto">
