--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -134,19 +134,19 @@
               
               <main class="d-flex flex-nowrap ">
                 <div class="d-flex flex-column flex-shrink-0 p-3 bg-color" style="width: 300px;">
-                  <a href="{% url 'home:home' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
+                  <a href="{% url 'home:home' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none" style="padding-left: 30px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
                       <path d="M4 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"/>
                       <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3z"/>
                     </svg>
-                    <span class="fs-1"> ADSAP</span>
+                    <span class="fs-1" style="padding-left: 20px;"> ADSAP</span>
                   </a>
-                  <hr>
+                  <hr style="color: white;">
                 <p class="text-white " style="font-size: large; margin-bottom: 0px;"> <b>Nombre de la empresa:</b> </p>
                 <p class="text-white"> Empresa </p>
                 <p class="text-white" style="font-size: large; margin-bottom: 0px;"><b>Nombre del empleado:</b> </p>
                 <p class="text-white"> {{ user.username }} </p>
-                <hr>
+                <hr style="color: white;">
                   <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
                       <a href="{% url 'home:home' %}" class="nav-link active" aria-current="page">
