--- a/ADSAP/templates/index.html
+++ b/ADSAP/templates/index.html
@@ -68,7 +68,7 @@
       <div class="col-lg-4">
         <p>
           <a class="btn btn-secondary btn-image" href="#">
-            <img src="https://imgur.com/YX3luYV.png" alt="Datos Personales">
+            <img src="https://imgur.com/A7sePgG.png" alt="Datos Personales">
             <span style="margin-top: -2px; font-size: 20px;">Datos Personales</span>
           </a>
         </p>
@@ -102,7 +102,7 @@
       <div class="col-lg-4">
         <p>
           <a class="btn btn-secondary btn-image" href="#">
-            <img src="https://imgur.com/tAW9xDC.png" alt="Noticias">
+            <img src="https://imgur.com/KTbJv7A.png" alt="Noticias">
             <span style="margin-top: -2px; font-size: 20px;">Noticias</span>
           </a>
         </p>
