--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -143,9 +143,11 @@
                   </a>
                   <hr style="color: white;">
                 <p class="text-white " style="font-size: large; margin-bottom: 0px;"> <b>Nombre de la empresa:</b> </p>
-                <p class="text-white"> Empresa </p>
+                <p class="text-white"> {{ empleado_empresa }} </p>
                 <p class="text-white" style="font-size: large; margin-bottom: 0px;"><b>Nombre del empleado:</b> </p>
-                <p class="text-white"> {{ user.username }} </p>
+                <span class="text-white">{{ empleado_nombre }}</span>
+                <span class="text-white">{{ empleado_apellido_paterno }}</span> 
+                <span class="text-white">{{ empleado_apellido_materno }}</span>
                 <hr style="color: white;">
                   <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
