--- a/ADSAP/templates/faq_filter.html
+++ b/ADSAP/templates/faq_filter.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 
+
   <br>
+
 
 <form action="filtro" method="get"> 
   <div class="input-group">
@@ -20,8 +22,8 @@
 
   <br>
   
-{% for pregunta in preguntas %}
-<div class="accordion" id="accordionExample">
+  {% for pregunta in preguntasAB %}
+  <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading{{ forloop.counter }}">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseThree">
@@ -35,11 +37,12 @@
       </div>
     </div>
   </div>
-    
-    
-{% endfor %}
+  {% endfor %}
+  
+  <br>
+  
 
-
+  <a href="{% url 'core:faq' %}"> Volver </a>
 
 
 {% endblock content %}
