--- a/ADSAP/templates/index.html
+++ b/ADSAP/templates/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'core:noticias' %}">
             <img src="https://imgur.com/tAW9xDC.png" alt="Noticias">
             <span style="margin-top: -2px; font-size: 20px;">Noticias</span>
           </a>
