--- a/ADSAP/templates/registration/cambio_contrasena_form.html
+++ b/ADSAP/templates/registration/cambio_contrasena_form.html
@@ -1,9 +1,114 @@
-<h3> INGRESA LA NUEVA CONTRASEÑA</h3>
+{% load static %}
+<!DOCTYPE html>
+<html lang="es">
 
-<p>Porfavor ingresa tu nueva contraseña 2 veces para verificar que la escribiste correctamente. </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Reecuperar contraseña</title>
+  <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    .background {
+      background-color: #dadada;
+      margin: 0;
+    }
 
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="Submit" name="Update Password">
-</form>
+    header {
+      background-color: #003366;
+      padding: 20px;
+      will-change: 100%;
+      text-align: left;
+      margin-bottom: 85px;
+    }
+
+    .Logo {
+      color: #fff;
+      font-size: 30px;
+      font-weight: bold;
+      font-family: 'ZCOOL QingKe HuangYou';
+    }
+
+    .Contenedor {
+      background-color: #fff;
+      padding-top: 10px;
+      padding-left: 25px;
+      padding-right: 25px;
+      height: 550px;
+      width: 600px;
+      border-radius: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    .Tittle {
+      font-size: 2em;
+      font-weight: bold;
+      font-family: 'ZCOOL QingKe HuangYou';
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    .Btn {
+      margin-top: 15px;
+      background-color: #004e9c;
+      border-color: #004e9c;
+    }
+
+    .Instrucciones {
+      font-size: 1em;
+      font-family: 'ZCOOL QingKe HuangYou';
+      text-align: justify;
+    }
+
+    .form-control {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
+
+<body class="background">
+  <header>
+    <div class="Logo">ADSAP</div>
+  </header>
+  <div class=Contenedor>
+    <p class="Tittle">Ingresa la nueva contraseña</p>
+    <p class="Instrucciones">Porfavor ingresa tu nueva contraseña 2 veces para verificar que la escribiste
+      correctamente.</p>
+    <form method="post">
+      {% csrf_token %}
+      <div>
+        <label for="id_new_password">Nueva contraseña:</label>
+        <input id="id_new_password1" type="password" name="new_password1" autocomplete="new-password" required=""
+          aria-describedby="id_new_password1_helptext" class="form-control" placeholder="Nueva contraseña">
+        </input>
+        <div id="id_new_password1_helptext" class="helptext">
+          <ul>
+            <li ::marker>
+              Tu contraseña no puede ser muy similar a tu información personal.
+            </li>
+            <li ::marker>
+              Tu contraseña debe contener al menos 8 caracteres.
+            </li>
+            <li ::marker>
+              Tu contraseña no debe ser una contraseña común.
+            </li>
+            <li ::marker>
+              Tu contraseña no puede ser enteramente numérica.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <label for="id_new_password2">Confirma la nueva contraseña:</label>
+        <input id="id_new_password2" type="password" name="new_password2" autocomplete="new-password" required=""
+          class="form-control" placeholder="Confirmación de contraseña">
+      </div>
+      <button class="btn btn-primary w-100 py-2 Btn" type="submit" name="Update Password">Cambiar contraseña</button>
+    </form>
+  </div>
+</body>
+</head>
+
+</html>
