--- a/ADSAP/templates/registration/cambio_contrasena_hecho.html
+++ b/ADSAP/templates/registration/cambio_contrasena_hecho.html
@@ -1,5 +1,84 @@
-<h3> CAMBIO DE CONTRASEÑA HECHO</h3>
+{% load static %}
+<!DOCTYPE html>
+<html lang="es">
 
-<p>Se ha cambiado la contraseña exitosamente. Ahora puedes iniciar sesion. </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Reecuperar contraseña</title>
+  <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    .background {
+      background-color: #dadada;
+      margin: 0;
+    }
 
-<a href="{% url 'users:login' %}">Iniciar sesion</a>
+    header {
+      background-color: #003366;
+      padding: 20px;
+      will-change: 100%;
+      text-align: left;
+      margin-bottom: 85px;
+    }
+
+    .Logo {
+      color: #fff;
+      font-size: 30px;
+      font-weight: bold;
+      font-family: 'ZCOOL QingKe HuangYou';
+    }
+
+    .Contenedor {
+      background-color: #fff;
+      padding-top: 10px;
+      padding-left: 25px;
+      padding-right: 25px;
+      height: 500px;
+      width: 600px;
+      border-radius: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    img {
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      height: 200px;
+      width: 200px;
+      display: block;
+      padding-bottom: 10px;
+    }
+
+    .Tittle {
+      font-size: 2em;
+      font-weight: bold;
+      font-family: 'ZCOOL QingKe HuangYou';
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    .Instrucciones {
+      font-size: 1em;
+      font-family: 'ZCOOL QingKe HuangYou';
+      text-align: center;
+    }
+  </style>
+
+<body class="background">
+  <header>
+    <div class="Logo">ADSAP</div>
+  </header>
+
+  <div class=Contenedor>
+    <img src="https://cdn-icons-png.flaticon.com/256/75/75916.png">
+    <p class="Tittle">¡CAMBIO DE CONTRASEÑA EXITOSO!</p>
+    <p class="Instrucciones">Se ha cambiado la contraseña exitosamente. Ahora puedes iniciar sesion.</p>
+    <a class="btn btn-primary w-100 py-2" type="submit" href="{% url 'users:login' %}">Iniciar Sesión</a>
+  </div>
+</body>
+</head>
+
+</html>
