--- a/ADSAP/templates/registration/cambio_contrasena.html
+++ b/ADSAP/templates/registration/cambio_contrasena.html
@@ -85,7 +85,8 @@
 
 <body class=background>
   <header>
-    <div class="Logo">ADSAP</div> <a class="btn btn-primary py-2 Btn1" type="submit" href="{% url 'users:login' %}">Volver al inicio de sesión</a>
+    <div class="Logo">ADSAP</div> 
+    <a class="btn btn-primary py-2 Btn1" type="submit" href="{% url 'users:login' %}">Volver al inicio de sesión</a>
     
   </header>
   <div class=Contenedor>
