--- a/ADSAP/templates/faq_filter.html
+++ b/ADSAP/templates/faq_filter.html
@@ -104,6 +104,6 @@
       </div>
       {% endfor %}
     </div>
-    <a class="btn btn-primary py-2 Btn1" type="submit" href="{% url 'core:faq' %}">Volver a las preguntas frecuentes</a>
+    <a class="btn btn-primary py-2 Btn1" type="submit" href="{% url 'core:faq' %}">Volver a preguntas frecuentes</a>
 </body>
 {% endblock content %}
