added datos personales page

--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -149,12 +149,13 @@
                   </a>
                   <hr style="color: white;">
                 <p class="text-white " style="font-size: large; margin-bottom: 0px;"> <b>Nombre de la empresa:</b> </p>
-                <p class="text-white"> {{ empleado.id_empresa.nombre }} </p>
+                <p class="text-white"> {{ empleado_empresa }} </p>
                 <p class="text-white" style="font-size: large; margin-bottom: 0px;"><b>Nombre del empleado:</b> </p>
                 <div class="empleado">
-                  <span class="text-white">{{ empleado.nombre }}</span>
-                  <span class="text-white">{{ empleado.apellido_paterno }}</span> 
-                  <span class="text-white">{{ empleado.apellido_materno }}</span>
+                  
+                  <span class="text-white">{{ empleado_nombre }}</span>
+                  <span class="text-white">{{ empleado_apellido_paterno }}</span> 
+                  <span class="text-white">{{ empleado_apellido_materno }}</span>
                 </div>
                 <hr style="color: white;">
                   <ul class="nav nav-pills flex-column mb-auto">
