--- a/ADSAP/templates/cuenta.html
+++ b/ADSAP/templates/cuenta.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html'%}
 
-{% block title %}INDEX VIEW {% endblock title %}
+{% block title %} CUENTA {% endblock title %}
 
 {% block content %}
 
