--- a/ADSAP/templates/index.html
+++ b/ADSAP/templates/index.html
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'core:datos_personales' %}">
             <img src="https://imgur.com/A7sePgG.png" alt="Datos Personales">
             <span style="margin-top: -2px; font-size: 20px;">Datos Personales</span>
           </a>
