Personal Data and Home Desing

--- a/ADSAP/templates/faq.html
+++ b/ADSAP/templates/faq.html
@@ -3,11 +3,11 @@
 {% block content %}
 <style>
   body {
-    background-color: #d9d9d9;
+    background-color: #fff;
   }
 
   .Contenedor {
-    background-color: #d9d9d9;
+    background-color: #fff;
     padding-top: 20px;
     padding-left: 25px;
     padding-right: 25px;
@@ -44,7 +44,7 @@
 
   .accordion-button {
     font-size: 0.8em;
-    background-color: #adadad;
+    background-color: #fff;
   }
 
   .accordion-body {
@@ -70,7 +70,7 @@
     <div class="Filtro">
       <form action="filtro" method="get">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Buscar pregunta" name="busqueda" style="background-color: #adadad;">
+          <input type="text" class="form-control" placeholder="Buscar pregunta" name="busqueda" style="background-color: #fff;">
           <button type="submit" class="btn btn-primary" data-mdb-ripple-init>
             <i class="fas fa-search"></i>
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search"
