--- a/ADSAP/templates/datos_personales.html
+++ b/ADSAP/templates/datos_personales.html
@@ -1,28 +1,101 @@
 {% extends 'base/base.html'%}
-
-{% block title %} DATOS PERSONALES {% endblock title %}
-
+{% block title %}Noticiaticias{% endblock title %}
 {% block content %}
+<style>
+  body {
+    background-color: #fff;
+  }
 
-    <h1>DATOS PERSONALES</h1>
-    <br>
-    
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    width: 1300px;
+    margin-left: 150px;
+    display: block;
+  }
 
+  .Tittle {
+    font-size: 3em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  img {
+    margin-top: 20px;
+    height: 230px;
+    width: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+
+  .Nombre {
+    font-size: 2em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .Area {
+    font-size: 1.5em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .Puesto {
+    font-size: 1.5em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10;
+  }
+
+  .Datos {
+    font-size: 1.8em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+  }
+
+  .DatosUsuario {
+    font-size: 24px;
+    color: #000000;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+  }
+</style>
+
+<body>
+  <div class="Contenedor">
+    <p class="Tittle">Datos personales</p>
     {% if empleado.sexo == "M" %}
-        <svg height="200px" width="200px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#000000;} </style> <g> <path class="st0" d="M432.871,404.268c-10.756-18.361-27.411-29.408-43.426-36.782c-16.038-7.367-31.903-11.337-41.438-14.935 c-7.56-2.808-15.799-7.195-21.676-11.948c-2.943-2.346-5.274-4.782-6.674-6.904c-1.446-2.13-1.885-3.784-1.885-4.894 c0-7.591,0-11.025,0-22.57c10.116-11.263,24.655-28.7,30.615-56.358c2.093-0.938,4.156-1.996,6.138-3.389 c4.96-3.412,9.154-8.365,12.708-15.106c3.59-6.771,6.756-15.427,10.138-27.27c1.706-6.011,2.51-11.226,2.51-15.874 c0-5.356-1.103-9.996-3.129-13.772c-1.743-3.293-4.127-5.661-6.592-7.419c32.73-73.058-9.289-131.94-9.289-131.94l12.335-31.709 c0,0-52.849,3.523-99.814-1.758c-135.694-15.247-143.277,79.858-143.277,122.13c0,25.326,3.784,40.045,7.061,48.06 c-0.663,0.871-1.378,1.631-1.929,2.644c-2.018,3.769-3.121,8.417-3.121,13.772c0.015,4.64,0.797,9.855,2.518,15.866 c4.529,15.769,8.611,25.944,13.9,33.422c2.652,3.71,5.654,6.69,8.931,8.954c1.996,1.393,4.06,2.451,6.138,3.389 c5.974,27.642,20.506,45.087,30.622,56.35c0,11.546,0,14.987,0,22.578c0.022,0.946-0.455,2.681-2.026,4.924 c-2.287,3.359-6.771,7.359-11.985,10.741c-5.192,3.404-11.106,6.287-16.074,8.03c-6.458,2.279-15.732,4.819-25.885,8.409 c-15.248,5.401-32.73,13.178-46.726,27.151c-14.018,13.914-23.985,34.316-23.902,62.324c0,3.561,0.156,7.256,0.484,11.062 c0.209,2.391,1.042,4.365,2.048,6.049c1.944,3.136,4.558,5.571,7.844,8.045c5.758,4.268,13.75,8.469,24.141,12.611 c31.062,12.342,83.614,23.836,153.855,23.85c57.073-0.007,102.495-7.612,134.168-17.072c15.836-4.738,28.208-9.908,37.095-15.025 c4.461-2.57,8.052-5.117,10.89-7.888c1.415-1.386,2.652-2.831,3.672-4.522c1.02-1.684,1.855-3.658,2.064-6.041 c0.32-3.814,0.469-7.493,0.469-11.039C444.38,431.754,440.045,416.477,432.871,404.268z M243.374,496.291 c-0.246-0.008-0.492-0.008-0.745-0.008l-24.812-58.228l0.32,0.253l22.57-28.216l3.702,15.575h0.991L243.374,496.291z M212.975,426.704l-28.462-66.756c3.568-2.071,7.076-4.35,10.294-6.905c1.966-1.579,3.844-3.24,5.564-5.006l47.56,34.965 L212.975,426.704z M207.068,338.979c1.572-3.053,2.645-6.435,2.66-10.174c0-8.224,0-11.441,0-25.535v-2.979l-1.982-2.205 c-10.57-11.776-24.879-27.404-29.848-55.173l-0.79-4.447l-4.238-1.505c-2.696-0.96-4.744-1.951-6.548-3.195 c-2.644-1.869-5.05-4.425-7.858-9.653c-2.764-5.2-5.714-12.976-8.916-24.261c-1.423-4.924-1.915-8.76-1.915-11.605 c0-3.314,0.633-5.236,1.282-6.465c0.976-1.774,2.175-2.533,3.702-3.143c1.043-0.403,2.145-0.552,2.778-0.604l6.011,1.274 l8.633,14.92c0,0-0.469-74.205,7.047-79.851c9.393-7.054,63.426,14.093,79.858,14.093c16.446,0,68.7-22.905,77.974-15.97 c10.786,8.067,8.931,88.774,8.931,88.774l8.834-22.86l3.621-0.388c0.633,0.008,2.942,0.276,4.514,1.311 c0.879,0.574,1.609,1.236,2.272,2.443c0.641,1.229,1.274,3.151,1.274,6.458c0.014,2.853-0.492,6.689-1.899,11.62 c-4.276,15.046-8.104,23.806-11.628,28.663c-1.758,2.458-3.367,3.986-5.162,5.244c-1.788,1.244-3.851,2.235-6.548,3.195 l-4.238,1.505l-0.782,4.447c-4.953,27.769-19.27,43.397-29.84,55.173l-1.996,2.205v2.979c0,14.094,0,17.311,0,25.535 c0.015,3.724,1.035,7.143,2.592,10.235l-48.857,35.895L207.068,338.979z M269.341,496.35c-0.246,0.015-0.462,0.022-0.716,0.022 l-2.033-70.704h1.028l3.695-15.575l22.562,28.208l0.32-0.246L269.341,496.35z M299.024,426.704l-34.95-43.694l47.516-34.928 c3.247,3.315,6.994,6.294,11.054,8.968c1.564,1.021,3.248,1.862,4.886,2.793L299.024,426.704z"></path> </g> </g></svg>
+    <img src="https://cdn-icons-png.flaticon.com/256/1896/1896513.png">
     {% else %}
-        <svg height="200px" width="200px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#000000;} </style> <g> <path class="st0" d="M394.907,363.894c-0.07-0.028-0.14-0.056-0.21-0.084c-9.137-3.446-18.077-5.976-25.948-8.13 c-5.243-1.433-9.961-2.698-13.932-3.908c-4.565-23.544-0.594-62.145,18.399-119.131C385.638,195.369,445.692,0,256,0 C66.308,0,130.55,194.222,138.784,232.641c10.199,47.592,25.193,96.734,19.014,118.425c-9.298,3.236-19.839,7.459-30.842,13.925 c-38.182-8.172-96.643,29.269-84.808,100.291c1.216,8.487,19.098,15.68,44.578,21.489c1.95,0.713,3.873,1.44,5.984,2.153 C128.257,500.948,186.808,511.979,256,512c57.958-0.007,106.877-7.529,141.794-16.973c8.752-2.37,16.609-4.858,23.55-7.396 c27.55-5.949,47.235-13.429,48.507-22.348C480.707,400.146,432.438,363.265,394.907,363.894z M358.899,443.808 c-5.369,0-52.792-16.63-102.899,3.055c-50.107-19.685-97.53-3.055-102.899-3.055c-4.271,0-8.507-46.451-14.589-67.22 c15.463-8.424,30.031-12.345,42.257-16.624c8.032-2.866,14.75-5.892,20.042-10.932c2.622-2.517,4.789-5.593,6.173-9.067 c1.391-3.474,2.013-7.263,2.006-11.212c0-8.354,0-18.798,0-33.107v-3.027l-2.02-2.243c-10.737-11.961-25.278-27.829-30.318-56.05 l-0.797-4.509l-4.306-1.538c-2.741-0.979-4.83-1.979-6.655-3.244c-2.691-1.901-5.131-4.494-7.984-9.814 c-2.816-5.284-5.802-13.177-9.066-24.634c-1.433-5.012-1.943-8.905-1.943-11.799c0.007-3.356,0.65-5.327,1.308-6.564 c0.992-1.804,2.209-2.572,3.761-3.194c1.062-0.405,2.188-0.559,2.831-0.615l7.626,1.622c2.845,4.53,4.201,8.92,4.201,8.92 s-5.369-16.106,8.948-37.58c13.953-20.929,73.812-2.796,111.63-56.559c36.958,43.599,37.79,14.946,51.219,35.084 c14.316,21.475,8.948,59.055,8.948,59.055s1.566-5.005,4.823-9.842l6.62-0.706c0.497-0.014,3.007,0.231,4.663,1.335 c0.902,0.573,1.636,1.244,2.307,2.482c0.657,1.238,1.3,3.202,1.314,6.564c0,2.894-0.518,6.781-1.944,11.799 c-4.341,15.295-8.235,24.187-11.807,29.122c-1.789,2.488-3.425,4.054-5.243,5.326c-1.824,1.266-3.914,2.265-6.654,3.244 l-4.306,1.538l-0.796,4.509c-5.04,28.22-19.581,44.089-30.318,56.05l-2.02,2.243v3.027c0,14.316,0,24.753,0,33.107 c-0.014,5.194,2.006,9.856,4.774,13.582c4.187,5.62,10.003,9.78,16.336,13.408c6.347,3.607,13.29,6.571,19.818,9.018 c7.801,2.894,17.742,5.173,28.611,8.346c0.616,0.182,1.245,0.378,1.86,0.559C367.826,392.583,363.38,443.808,358.899,443.808z"></path> </g> </g></svg>
+    <img src="https://cdn-icons-png.flaticon.com/256/1896/1896516.png">
     {% endif %}
-    <span>{{ empleado.nombre }}</span>
-    <span>{{ empleado.apellido_paterno }}</span> 
-    <span>{{ empleado.apellido_materno }}</span>
+    <p class="Nombre">{{ empleado.nombre }} {{ empleado.apellido_paterno }} {{empleado.apellido_materno }}</p>
+    <p class="Area">{{ empleado.area }}</p>
+    <p class="Puesto">{{ empleado.puesto }}</p>
 
-    <p>Fecha de nacimiento: {{ empleado.fecha_nacimiento }} </p>
-    <p>Lugar de nacimiento: <span>{{ empleado.municipio }}</span> , <span>{{ empleado.estado }}</span> </p>
-    <p>RFC: {{ empleado.rfc }} </p>
-    <p>CURP: {{ empleado.curp }} </p>
-    <p>NSS: {{ empleado.nss }} </p>
-    <p>Direccion: <span>{{ empleado.calle }}</span> #<span>{{ empleado.numero_casa }}</span> , <span>{{ empleado.colonia }}</span> , <span>{{ empleado.cp }}</span> </p>
-    <p>Telefono de contacto: {{ empleado.telefono }} </p>
-
+    <p class="Datos">Fecha de nacimiento: <span class="DatosUsuario">{{ empleado.fecha_nacimiento }}</span> </p>
+    <p class="Datos">Lugar de nacimiento: <span class="DatosUsuario">{{ empleado.municipio}},</span> <span
+        class="DatosUsuario">{{ empleado.estado }}</span> </p>
+    <p class="Datos">RFC: <span class="DatosUsuario">{{ empleado.rfc }}</span></p>
+    <p class="Datos">CURP: <span class="DatosUsuario">{{ empleado.curp }}</span></p>
+    <p class="Datos">NSS: <span class="DatosUsuario">{{ empleado.nss }}</span></p>
+    <p class="Datos">Dirección: <span class="DatosUsuario">{{ empleado.calle }} #{{ empleado.numero_casa }}, {{empleado.colonia}} CP: {{empleado.cp }}</span></p>
+    <p class="Datos">Teléfono de contacto: <span class="DatosUsuario">{{ empleado.telefono }}</span></p>
+  </div>
+</body>
 {% endblock content %}
