Personal Data and Home Desing 1.1

--- a/ADSAP/templates/noticia.html
+++ b/ADSAP/templates/noticia.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html'%}
-{% block title %}Noticiaticias{% endblock title %}
+{% block title %}Noticias{% endblock title %}
 {% block content %}
 <style>
   body {
